# EER

./: .gitignore
EER_he/: readme.md
EER_he/private_audio/: CMakeLists.txt  HEaaNTimer.hpp  examples.hpp  generalized.cpp  inference.cpp  model.hpp  training.cpp
EER_he/private_audio/activation/: CMakeLists.txt  activation.cpp  activation.hpp  examples.hpp
EER_he/private_audio/ccmm/: CMakeLists.txt  ccmm.cpp  ccmm.hpp  examples.hpp  make_plain.cpp
